[package]
name = "task"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"


[package.metadata.deb]
maintainer = "Андрей Брысин"
depends = "libc6 (>= 2.31), cargo"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/task",
        "usr/bin/",
        "777",
    ],
    [
        "README.md",
        "usr/share/doc/task/README",
        "777",
    ],
]
